Add derivations for AA and GS

--- a/dt-cheatsheet.tex
+++ b/dt-cheatsheet.tex
@@ -1,5 +1,5 @@
-%\documentclass[landscape, 12pt]{extarticle}
-\documentclass[14pt]{extarticle}
+\documentclass[landscape, 12pt]{extarticle}
+%\documentclass[14pt]{extarticle}
 
 \title{Decision Theory Cheat Sheet}
 \author{Giacomo Ellero}
@@ -8,7 +8,7 @@
 \usepackage{preamble_base}
 \usepackage{preamble_math}
 \usepackage{multicol}
-%\geometry{letterpaper}
+\geometry{letterpaper}
 
 \renewcommand{\vec}[1]{\bm{#1}}
 
@@ -32,364 +32,396 @@
 
 \section{Notation}
 
-%\begin{multicols}{2}
+\begin{multicols}{2}
 
-\paragraph{Actions} what the DM does
-\begin{itemize}
-	\item Preference: $\succsim$
-	\item Space: $\bm A$
-	\item Collections of subsets $A$ of $\bm A$: $\mathcal A$
-\end{itemize}
-
-
-\paragraph{Consequences} what happens
-\begin{itemize}
-	\item Preference: $\dot \succsim$
-	\item Space: $\bm C$
-\end{itemize}
+	\paragraph{Actions} what the DM does
+	\begin{itemize}
+		\item Preference: $\succsim$
+		\item Space: $\bm A$
+		\item Collections of subsets $A$ of $\bm A$: $\mathcal A$
+	\end{itemize}
 
 
-\paragraph{State} everything else we cannot control
-\begin{itemize}
-	\item Each state is called $s$
-	\item Space: $S$
-	\item Algebra on $S$: $\bm \Sigma$
-	\item Each element of $\bm \Sigma$ is an event $E$ ???
-\end{itemize}
+	\paragraph{Consequences} what happens
+	\begin{itemize}
+		\item Preference: $\dot \succsim$
+		\item Space: $\bm C$
+	\end{itemize}
 
-\paragraph{Act} what happens in each state
-\[
-	f: S \to \bm C = \sum^n_{i = 1} c_i \mathds 1_{E_i}
-\]
-\begin{itemize}
-	\item $c_i$ is the consequence of event $E_i$
-	\item Preference: $\mathring \succsim$
-	\item Space: $\bm F$
-	\item $\bm C \subseteq \bm F$: consequences can be seen as state independent acts
-	\item We use simple acts i.e. where $\Im(f)$ is finite
-	\item Every action gives an act $\rho(a) = \gamma_a: S \to \bm C$
-	      where $\rho$ is the consequence function.
-	\item There is a bijection between acts and actions given by
-	      \[
-		      a \succsim b \iff \rho(a) \, \mathring \succsim \, \rho(b)
-	      \]
-\end{itemize}
 
-\paragraph{Lotteries}
-\begin{itemize}
-	\item Space over consequences $\bm C$: $\bm \Delta(\bm C) = \bm L$
-	\item Preference: $\ddot \succsim$
-	\item Sometimes acts do not output consequences but lotteries:
-	      $\gamma: \bm A \cross S \to \bm \Delta(\bm C)$ and $\gamma(a, s)(c)$ is the probability
-	      of the consequence $c$ when action $a$ is taken in the state $s$
-\end{itemize}
+	\paragraph{State} everything else we cannot control
+	\begin{itemize}
+		\item Each state is called $s$
+		\item Space: $S$
+		\item Algebra on $S$: $\bm \Sigma$
+		\item Each element of $\bm \Sigma$ is an event $E$ ???
+	\end{itemize}
 
-\paragraph{Charge}
-\begin{itemize}
-	\item $\mu : \bm \Sigma \to \R$ s.t. for $A, B \in \bm \Sigma$ if $A \cap B = \varnothing$
-	      then $\mu(A \cup B) = \mu(A) + \mu(B)$.
-	\item $\mathrm{ba}(\bm \Sigma)$ is the space of bounded charges, that is
-	      \[
-		      \mathrm{ba}(\bm \Sigma) = \left\{
-		      \mu \in \R^{\bm \Sigma}:
-		      \substack{
-			      \sup_{A \in \bm \Sigma} \abs{\mu(A)} < \inf \\
-			      \mu(A \cup B) = \mu(A) + \mu(B) \enspace \forall A, B \in \Sigma \text{ s.t. } A \cap B = \varnothing
-		      }
-		      \right\}
-	      \]
-\end{itemize}
+	\paragraph{Act} what happens in each state
+	\[
+		f: S \to \bm C = \sum^n_{i = 1} c_i \mathds 1_{E_i}
+	\]
+	\begin{itemize}
+		\item $c_i$ is the consequence of event $E_i$
+		\item Preference: $\mathring \succsim$
+		\item Space: $\bm F$
+		\item $\bm C \subseteq \bm F$: consequences can be seen as state independent acts
+		\item We use simple acts i.e. where $\Im(f)$ is finite
+		\item Every action gives an act $\rho(a) = \gamma_a: S \to \bm C$
+		      where $\rho$ is the consequence function.
+		\item There is a bijection between acts and actions given by
+		      \[
+			      a \succsim b \iff \rho(a) \, \mathring \succsim \, \rho(b)
+		      \]
+	\end{itemize}
 
-\paragraph{Chisini Mean}
-\begin{itemize}
-	\item A Chisini mean is a function $I: B_0(S, \bm \Sigma, K) \to \R$
-	      where $B_0(S, \bm \Sigma, K) = \bm F$ is the space of simple $\bm \Sigma$-measurable acts
-	      acts $f: S\to K$ and $K \subseteq \R$ s.t. $0$ is an interior point of $K$.
-	\item $I$ is an affine Chisini mean if and only if $\exists P \in \bm \Delta(\bm \Sigma)$
-	      such that for every $f \in \bm F$ $I$ admits a SEU representation:
-	      \[
-		      I(f) = \int_S f \dd P = \sum_{i = 1}^n a_i P(E_i)
-		      \tag{SEU}
-	      \]
-	\item $I$ is concave and constant affine iff
-	      there exists a set $\mathcal C \subseteq \bm \Delta(\bm \Sigma)$
-	      of probability such that for every $f \in \bm F$ $I$
-	      has a robust expectation representation:
-	      \[
-		      I(f) = \min_{P \in \mathcal C} \int_S f \dd P
-		      = \min_{P \in \mathcal C} \sum_{i=1}^n a_i P(E_i)
-		      \tag{Robust}
-	      \]
-\end{itemize}
+	\paragraph{Lotteries}
+	\begin{itemize}
+		\item Space over consequences $\bm C$: $\bm \Delta(\bm C) = \bm L$
+		\item Preference: $\ddot \succsim$
+		\item Sometimes acts do not output consequences but lotteries:
+		      $\gamma: \bm A \cross S \to \bm \Delta(\bm C)$ and $\gamma(a, s)(c)$ is the probability
+		      of the consequence $c$ when action $a$ is taken in the state $s$
+	\end{itemize}
 
-%\end{multicols}
-%
-%\clearpage
+	\paragraph{Charge}
+	\begin{itemize}
+		\item $\mu : \bm \Sigma \to \R$ s.t. for $A, B \in \bm \Sigma$ if $A \cap B = \varnothing$
+		      then $\mu(A \cup B) = \mu(A) + \mu(B)$.
+		\item $\mathrm{ba}(\bm \Sigma)$ is the space of bounded charges, that is
+		      \[
+			      \mathrm{ba}(\bm \Sigma) = \left\{
+			      \mu \in \R^{\bm \Sigma}:
+			      \substack{
+				      \sup_{A \in \bm \Sigma} \abs{\mu(A)} < \inf \\
+				      \mu(A \cup B) = \mu(A) + \mu(B) \enspace \forall A, B \in \Sigma \text{ s.t. } A \cap B = \varnothing
+			      }
+			      \right\}
+		      \]
+	\end{itemize}
+
+	\paragraph{Chisini Mean}
+	\begin{itemize}
+		\item A Chisini mean is a function $I: B_0(S, \bm \Sigma, K) \to \R$
+		      where $B_0(S, \bm \Sigma, K) = \bm F$ is the space of simple $\bm \Sigma$-measurable acts
+		      acts $f: S\to K$ and $K \subseteq \R$ s.t. $0$ is an interior point of $K$.
+		\item $I$ is an affine Chisini mean if and only if $\exists P \in \bm \Delta(\bm \Sigma)$
+		      such that for every $f \in \bm F$ $I$ admits a SEU representation:
+		      \[
+			      I(f) = \int_S f \dd P = \sum_{i = 1}^n a_i P(E_i)
+			      \tag{SEU}
+		      \]
+		\item $I$ is concave and constant affine iff
+		      there exists a set $\mathcal C \subseteq \bm \Delta(\bm \Sigma)$
+		      of probability such that for every $f \in \bm F$ $I$
+		      has a robust expectation representation:
+		      \[
+			      I(f) = \min_{P \in \mathcal C} \int_S f \dd P
+			      = \min_{P \in \mathcal C} \sum_{i=1}^n a_i P(E_i)
+			      \tag{Robust}
+		      \]
+	\end{itemize}
+
+\end{multicols}
+
+\clearpage
 
 \section{Axioms}
 
-%\begin{multicols}{2}
-\subsection{General}
+\begin{multicols}{2}
+	\subsection{General}
 
-\paragraph{A.1 Transitivity}
-For all $x, y, z \in X$ if $x \succsim y$ and $y \succsim z$, then $x \succsim z$.
+	\paragraph{A.1 Transitivity}
+	For all $x, y, z \in X$ if $x \succsim y$ and $y \succsim z$, then $x \succsim z$.
 
-\paragraph{A.2 Completeness}
-For all $x, y \in X$ we have $x \succsim y$ or $y \succsim x$ (or both).
+	\paragraph{A.2 Completeness}
+	For all $x, y \in X$ we have $x \succsim y$ or $y \succsim x$ (or both).
 
-\paragraph{A.3 Monotonicity}
-For all $x, y \in X$, if
-\begin{itemize}
-	\item \textit{Strict}: $x>y$ (at least one is bigger bigger)
-	\item \textit{Strong}: $x \gg y$ (all components are bigger)
-	\item \textit{Weak}: $x \geq y$
-\end{itemize}
-we have $x \succ y$ (or $x\succsim y$ for weak)
+	\paragraph{A.3 Monotonicity}
+	For all $x, y \in X$, if
+	\begin{itemize}
+		\item \textit{Strict}: $x>y$ (at least one is bigger bigger)
+		\item \textit{Strong}: $x \gg y$ (all components are bigger)
+		\item \textit{Weak}: $x \geq y$
+	\end{itemize}
+	we have $x \succ y$ (or $x\succsim y$ for weak)
 
-\paragraph{A.4 Archimedean}
-For all $x \succ y \succ z \in X$ there exists $\alpha, \beta \in (0, 1)$ such that
-\[
-	\alpha x + \overline \alpha z \succ y \succ \beta x + \overline \beta z
-\]
+	\paragraph{A.4 Archimedean}
+	For all $x \succ y \succ z \in X$ there exists $\alpha, \beta \in (0, 1)$ such that
+	\[
+		\alpha x + \overline \alpha z \succ y \succ \beta x + \overline \beta z
+	\]
 
-\paragraph{A.5 Convexity}
-For all $x, y \in X$, there exists $\alpha \in [0, 1]$ such that $x \sim y$ implies
-that for the convex combination
-\[
-	c = \alpha x + \overline \alpha y
-\]
-\begin{center}
-	\begin{tabular}{cc|cc|cc}
-		\textit{Weak}     & $c \succsim x$ &
-		\textit{Strict}   & $c \succ x$    &
-		\textit{Affinity} & $c \sim x$       \\
-	\end{tabular}
-\end{center}
+	\paragraph{A.5 Convexity}
+	For all $x, y \in X$, there exists $\alpha \in [0, 1]$ such that $x \sim y$ implies
+	that for the convex combination
+	\[
+		c = \alpha x + \overline \alpha y
+	\]
+	\begin{center}
+		\begin{tabular}{cc|cc|cc}
+			\textit{Weak}     & $c \succsim x$ &
+			\textit{Strict}   & $c \succ x$    &
+			\textit{Affinity} & $c \sim x$       \\
+		\end{tabular}
+	\end{center}
 
-\paragraph{A.8 Independence}
-For all $x, y, z \in X$ and $\alpha \in (0,1)$
-if $x \succ y$ then
-\[
-	\alpha x + \overline \alpha z \succ \alpha y + \overline \alpha z
-\]
+	\paragraph{A.8 Independence}
+	For all $x, y, z \in X$ and $\alpha \in (0,1)$
+	if $x \succ y$ then
+	\[
+		\alpha x + \overline \alpha z \succ \alpha y + \overline \alpha z
+	\]
 
-\paragraph{A.16 Monotonicity (of acts)}
-For any $f, g \in \bm F$ if $f(s) \ddsuccsim g(s)$ for all $s \in S$
-then $f \dsuccsim g$.
+	\paragraph{A.16 Monotonicity (of acts)}
+	For any $f, g \in \bm F$ if $f(s) \ddsuccsim g(s)$ for all $s \in S$
+	then $f \dsuccsim g$.
 
-%\subsection{Lotteries}
-%\paragraph{B.1 Weak order}
-%$\succsim$ is complete and transitive (A.1 and A.2)
-%
-%\paragraph{B.2 Independence}
-%For all $l, l', l'' \in \bm L$ and $p \in (0,1)$
-%\[
-%	l \succ l' \implies pl + \overline p l'' \succ p l' + \overline p l''
-%\]
-%\textit{Strong}: replace $\succ$ with $\succsim$ and $\sim$.
-%
-%\paragraph{B.3 Archimedean}
-%For all $l \succ l' \succ l'' \in \bm L$ there exists $p,q \in (0,1)$
-%\[
-%	pl + \overline p l'' \succ l' \succ ql + \overline q l''
-%\]
-%
-%\paragraph{B.4 Monotonicity}
-%For all $c, c' \in \bm C$ then $c \gg c' \implies c\succ c'$ and $c \geq c' \implies c \succsim c'$.
-%
-%\paragraph{B.5 Certainty equivalent}
-%For every $l \in \bm L$ there exists $c_l \in \bm C$ such that $l \sim c_l$.
+	%\subsection{Lotteries}
+	%\paragraph{B.1 Weak order}
+	%$\succsim$ is complete and transitive (A.1 and A.2)
+	%
+	%\paragraph{B.2 Independence}
+	%For all $l, l', l'' \in \bm L$ and $p \in (0,1)$
+	%\[
+	%	l \succ l' \implies pl + \overline p l'' \succ p l' + \overline p l''
+	%\]
+	%\textit{Strong}: replace $\succ$ with $\succsim$ and $\sim$.
+	%
+	%\paragraph{B.3 Archimedean}
+	%For all $l \succ l' \succ l'' \in \bm L$ there exists $p,q \in (0,1)$
+	%\[
+	%	pl + \overline p l'' \succ l' \succ ql + \overline q l''
+	%\]
+	%
+	%\paragraph{B.4 Monotonicity}
+	%For all $c, c' \in \bm C$ then $c \gg c' \implies c\succ c'$ and $c \geq c' \implies c \succsim c'$.
+	%
+	%\paragraph{B.5 Certainty equivalent}
+	%For every $l \in \bm L$ there exists $c_l \in \bm C$ such that $l \sim c_l$.
 
-\subsection{De Finetti}
-These are acioms over events $E \in \bm \Sigma$,
-where $\succsim^*$ is the \textit{qualitatibe probability}:
-\say{event $E$ is at least as likely as event $F$}.
+	\subsection{De Finetti}
+	These are acioms over events $E \in \bm \Sigma$,
+	where $\succsim^*$ is the \textit{qualitative probability}:
+	\say{event $E$ is at least as likely as event $F$}.
 
-\paragraph{DF.1 Weak order}
-$\succsim^*$ is complete and transitive (A.1 and A.2)
+	\paragraph{DF.1 Weak order}
+	$\succsim^*$ is complete and transitive (A.1 and A.2)
 
-\paragraph{DF.2 Normalization}
-For all events $E \in \bm \Sigma$
-we have $S \succsim^* E \succsim^* \varnothing$
-and $S \succsim^* \varnothing$.
+	\paragraph{DF.2 Normalization}
+	For all events $E \in \bm \Sigma$
+	we have $S \succsim^* E \succsim^* \varnothing$
+	and $S \succsim^* \varnothing$.
 
-\paragraph{DF.3 Additivity}
-For all events $E, F, H$ such that $E \cap H = F \cap H = \varnothing$ we have
-\[
-	E \succsim^* F \iff E \cup H \succsim^* F \cup H
-\]
+	\paragraph{DF.3 Additivity}
+	For all events $E, F, H$ such that $E \cap H = F \cap H = \varnothing$ we have
+	\[
+		E \succsim^* F \iff E \cup H \succsim^* F \cup H
+	\]
 
-\paragraph{DF.4 Equidivisibility}
-For each $n \geq 1$ there exists a partition of $2^n$ equally likely events.
+	\paragraph{DF.4 Equidivisibility}
+	For each $n \geq 1$ there exists a partition of $2^n$ equally likely events.
 
-A stronger version (\textit{Divisibility}) states that for all $E \succ^* F$ there ecists
-a partition of events $\{H_i\}^n_{i = 1}$
-such that $E \succ^* F \cup H_i$ for all $i = 1, \dots, n$.
+	A stronger version (\textit{Divisibility}) states that for all $E \succ^* F$ there ecists
+	a partition of events $\{H_i\}^n_{i = 1}$
+	such that $E \succ^* F \cup H_i$ for all $i = 1, \dots, n$.
 
-\subsection{Savage}
-We consider $\succsim$ on the set $\bm F$ of acts from $S$ to $\bm C$.
+	\subsection{Savage}
+	We consider $\succsim$ on the set $\bm F$ of acts from $S$ to $\bm C$.
 
-Let $f, g \in \bm F$ and $E \in \bm \Sigma$: we introduce the following notation
-\[
-	fEg = \begin{cases}
-		f(s) & \text{if } s \in E    \\
-		g(s) & \text{if } s \notin E
-	\end{cases}
-\]
+	Let $f, g \in \bm F$ and $E \in \bm \Sigma$: we introduce the following notation
+	\[
+		fEg = \begin{cases}
+			f(s) & \text{if } s \in E    \\
+			g(s) & \text{if } s \notin E
+		\end{cases}
+	\]
 
-\paragraph{P.1 Weak order}
-$\succsim$ is complete and transitive (A.1 and A.2).
+	\paragraph{P.1 Weak order}
+	$\succsim$ is complete and transitive (A.1 and A.2).
 
-\paragraph{P.2 Sure-thing principle}
-For all acts $f, g, h, h'$ and any event $E$
-\[
-	fEh \succsim gEh \iff fEh' \succsim gEh'
-\]
-from which we can define the \textit{conditional preference} $\succsim_E$ as
-\[
-	f \succsim_E g \iff \exists h \in \bm F : f E h \succsim gEh
-\]
+	\paragraph{P.2 Sure-thing principle}
+	For all acts $f, g, h, h'$ and any event $E$
+	\[
+		fEh \succsim gEh \iff fEh' \succsim gEh'
+	\]
+	from which we can define the \textit{conditional preference} $\succsim_E$ as
+	\[
+		f \succsim_E g \iff \exists h \in \bm F : f E h \succsim gEh
+	\]
 
-An event is \textit{null} if $\forall f, g$ there holds $fEh \sim gEh$.
+	An event is \textit{null} if $\forall f, g$ there holds $fEh \sim gEh$.
 
-\paragraph{P.3 State independece}
-Let $E$ be a non-null event and $c, d \in \bm C$, for any $h \in \bm F$
-\[
-	cEh \succsim dEh \iff c\, \dot \succsim \, d
-\]
+	\paragraph{P.3 State independence}
+	Let $E$ be a non-null event and $c, d \in \bm C$, for any $h \in \bm F$
+	\[
+		cEh \succsim dEh \iff c\, \dot \succsim \, d
+	\]
 
-\paragraph{P.4 Stake independance}
-For any $c \dot \succsim d$ and $c' \dsuccsim d' \in \bm C$
-and $E, F \in \bm \Sigma$
-\[
-	cEd \succsim cFd \iff c'Ed'\succsim c'Fd'
-\]
+	\paragraph{P.4 Stake independence}
+	For any $c \dot \succsim d$ and $c' \dsuccsim d' \in \bm C$
+	and $E, F \in \bm \Sigma$
+	\[
+		cEd \succsim cFd \iff c'Ed'\succsim c'Fd'
+	\]
 
-\paragraph{P.5 Non-triviality}
-There exists $c \, \dot \succ \, d \in \bm C$.
+	\paragraph{P.5 Non-triviality}
+	There exists $c \, \dot \succ \, d \in \bm C$.
 
-\paragraph{P.6 Divisibility}
-Let $f \succ g \in \bm F$ and $c \in \bm C$,
-then there exists a parition of events $\{E_i\}^n_{i=1}$
-such that $cE_if \succ g$ and $f \succ cE_ig$ for all $i=1,\dots,n$.
+	\paragraph{P.6 Divisibility}
+	Let $f \succ g \in \bm F$ and $c \in \bm C$,
+	then there exists a parition of events $\{E_i\}^n_{i=1}$
+	such that $cE_if \succ g$ and $f \succ cE_ig$ for all $i=1,\dots,n$.
 
-This tells us that we can divide $S$ in events so small that we can create
-a partition of events that does not influence the outcome at all (represented by $cE_i$).
+	This tells us that we can divide $S$ in events so small that we can create
+	a partition of events that does not influence the outcome at all (represented by $cE_i$).
 
-\subsection{Gilboa-Schmeidler}
-\paragraph{GS.3 Certainty independece}
-For every $f, g \in \bm F(X)$ and $l \in \bm X$
-\[
-	f \succ g \iff \alpha f + \overline \alpha l \succ \alpha g + \overline \alpha x
-\]
-same for $\sim$.
+	\subsection{Gilboa-Schmeidler}
+	\paragraph{GS.3 Certainty independence}
+	For every $f, g \in \bm F(X)$ and $l \in \bm X$
+	\[
+		f \succ g \iff \alpha f + \overline \alpha l \succ \alpha g + \overline \alpha x
+	\]
+	same for $\sim$.
 
-\paragraph{GS.6 Uncertainty Aversion}
-If $f \sim g \in \bm F$ then $\alpha f + \overline \alpha g \succsim f$.
+	\paragraph{GS.6 Uncertainty Aversion}
+	If $f \sim g \in \bm F$ then $\alpha f + \overline \alpha g \succsim f$.
 
-%\end{multicols}
-%
-%\clearpage
+\end{multicols}
+
+\clearpage
 
 \section{Representations}
 
-%\begin{multicols}{2}
-\subsection{Savage}
+\begin{multicols}{2}
+	\subsection{Savage}
 
-\paragraph{Axioms} P.1-P.6
+	\paragraph{Axioms} P.1-P.6
 
-\paragraph{Theorem} The following are equivalent:
-\begin{itemize}
-	\item $\succsim$ over $\bm F$ respects the axioms
-	\item $\exists \dot u$ (utility on $\bm C$ prices) and
-	      an unique probability measure $P$ of $\bm \Sigma$
-	      such that
-	      \[
-		      u(f) = \int_S \dot u(f(s)) dP(s)
-	      \]
-	      represents $\succsim$.
-\end{itemize}
+	\paragraph{Theorem} The following are equivalent:
+	\begin{itemize}
+		\item $\succsim$ over $\bm F$ respects the axioms
+		\item $\exists \dot u$ (utility on $\bm C$ prices) and
+		      an unique probability measure $P$ of $\bm \Sigma$
+		      such that
+		      \[
+			      u(f) = \int_S \dot u(f(s)) dP(s)
+		      \]
+		      represents $\succsim$.
+	\end{itemize}
 
-\paragraph{Derivation}
-\begin{enumerate}
-	\item P.* axioms for $\succsim$ $\implies$ DF.* axioms over $\succsim^*$ (on events)
-	      $\implies$ by De Finetti $\exists P$ that represents $\succsim^*$..
-	\item $P$ induces a probability measure $p_f \in \bm \Delta(\bm C)$ for  given act $f$
-	      as follows $p_f(c) = P(s \in S : f(s) = c)$.
-	\item $p_f \ddsuccsim p_g \iff f \succsim g$.
-	\item P.* axioms on $\succsim$ $\implies$ A.1, A.2, A.4, A.8 axioms over $\ddsuccsim$ $\implies$
-	      $\ddsuccsim$ has a vN-M utility representation.
-	\item Combine:
-	      \begin{align*}
-		      f \succsim g & \iff p_f \ddsuccsim p_g                                             \\
-		                   & \iff \sum \dot u(c)p_f(c) \geq \sum \dot u(c)p_g(c)                 \\
-		                   & \iff \int_S \dot u(f(s)) \dd P(s) \geq \int_S \dot u(g(s)) \dd P(s)
-	      \end{align*}
-\end{enumerate}
+	\paragraph{Derivation}
+	\begin{enumerate}
+		\item P.* axioms for $\succsim$ $\implies$ DF.* axioms over $\succsim^*$ (on events)
+		      $\implies$ by De Finetti $\exists P$ that represents $\succsim^*$..
+		\item $P$ induces a probability measure $p_f \in \bm \Delta(\bm C)$ for  given act $f$
+		      as follows $p_f(c) = P(s \in S : f(s) = c)$.
+		\item $p_f \ddsuccsim p_g \iff f \succsim g$.
+		\item P.* axioms on $\succsim$ $\implies$ A.1, A.2, A.4, A.8 axioms over $\ddsuccsim$ $\implies$
+		      $\ddsuccsim$ has a vN-M utility representation.
+		\item Combine:
+		      \begin{align*}
+			      f \succsim g & \iff p_f \ddsuccsim p_g                                             \\
+			                   & \iff \sum \dot u(c)p_f(c) \geq \sum \dot u(c)p_g(c)                 \\
+			                   & \iff \int_S \dot u(f(s)) \dd P(s) \geq \int_S \dot u(g(s)) \dd P(s)
+		      \end{align*}
+	\end{enumerate}
 
-\subsection{Anscombe-Aumann}
+	\subsection{Anscombe-Aumann}
 
-\paragraph{Setup}
-Very similar to Savage
-but this times acts are defined as $f: S \to \bm \Delta(\bm C)$
-such that they give out lotteries instead of straigh up consequences.
-We therefore have two stages of uncertainty: first the events, and then the lottery.
+	\paragraph{Setup}
+	Very similar to Savage
+	but this times acts are defined as $f: S \to \bm \Delta(\bm C)$
+	such that they give out lotteries instead of straight up consequences.
+	We therefore have two stages of uncertainty: first the events, and then the lottery.
 
-Differences from Savage: $\bm \Delta(\bm C)$ is a convex vector space,
-therefore it has more structure than $\bm C$ in Savage's setup;
-meanwhile $\bm \Sigma$ is just an algebra	of $S$, not necessarily a $\sigma$-algebra
-and we no longer have P.6, which asked for a non-trivial structure of the event space.
+	Differences from Savage: $\bm \Delta(\bm C)$ is a convex vector space,
+	therefore it has more structure than $\bm C$ in Savage's setup;
+	meanwhile $\bm \Sigma$ is just an algebra	of $S$, not necessarily a $\sigma$-algebra
+	and we no longer have P.6, which asked for a non-trivial structure of the event space.
 
-In the abstract setting we consider a convex subset $X$ of a vector space
-instead of $\bm \Delta(\bm C)$.
+	In the abstract setting we consider a convex subset $X$ of a vector space
+	instead of $\bm \Delta(\bm C)$.
 
-\paragraph{Axioms} A.1, A.2, A.4, A.8 (same as vN-M), and A.16.
+	\paragraph{Axioms} A.1, A.2, A.4, A.8 (same as vN-M), and A.16.
 
-\paragraph{Theorem}
-Consider $\succsim$ over $\bm F$.
-The following are equivalent:
-\begin{itemize}
-	\item $\succsim$ satisfies the axioms
-	\item There exists $\dot u: \bm C \to \R$ and an unique probability measure $P: \bm \to [0, 1]$
-	      such that
-	      \[
-		      u(f) = \int_S \left( \sum_{c\in \text{supp } f(s)} \dot u(c) f(s)(c) \right) \dd P(s)
-	      \]
-\end{itemize}
-In the generalized settings we write
-\[
-	u(f) = \int_S v(f(s))\dd P(s)
-\]
+	\paragraph{Theorem}
+	Consider $\succsim$ over $\bm F$.
+	The following are equivalent:
+	\begin{itemize}
+		\item $\succsim$ satisfies the axioms
+		\item There exists $\dot u: \bm C \to \R$ and an unique probability measure $P: \bm \to [0, 1]$
+		      such that
+		      \[
+			      u(f) = \int_S \left( \sum_{c\in \text{supp } f(s)} \dot u(c) f(s)(c) \right) \dd P(s)
+		      \]
+	\end{itemize}
+	In the generalized settings we write
+	\[
+		U(f) = \int_S u(f(s))\dd P(s)
+	\]
+	and $\bm F_X$ is the space of acts over $X$.
 
-\paragraph{Derivation}
-\begin{enumerate}
-	\item TODO: lecture notes are a mess since they miss Chisini lemma,
-	      giuseppe's notes are much better
-\end{enumerate}
+	\paragraph{Derivation}
+	\begin{enumerate}
+		\item For every $f \in \bm F_X$ there exists $x_f \in X$ s.t. $f \sim x_f$.
+		\item By vN-M there exists $u:X \to \R$ affine that represents $\dsuccsim$ on $X$.
+		\item $V: \bm F_X: \to \R$ is an utility representation of $\succsim$ over $\bm F_X$
+		      defined as
+		      \[V(f) = u(x_f)\]
+		\item Introduce $u(X) \subseteq \R$ the image of $u$ and
+		      $\bm F_{u(X)} = \{ u \circ f:f \in \bm F_X \}$
+		      the set of acts from $S$ to $u(X) \subseteq \R$.
+		      Then for a given act $f \in \bm F_X$ written as $f = \sum a_i \mathds 1_{E_i}$
+		      we have $u \circ f \in \bm F_{u(X)}$
+		      written as $u \circ f = \sum u(a_i) \mathds 1_{E_i}$.
+		\item The function $I: \bm F_{u(X)} \to \R$ defined as $I(u\circ f) = V(f)$
+		      is well defined and monotone
+		      (that is $I(u\circ f) \geq I(u \circ g) \iff u\circ f \geq u\circ g$)
+		\item $I$ is normalized, that is,
+		      for all trivial acts $x \in X$ we have $I(u \circ x) = u \circ x$.
+		\item $I$ is affine and, in particular, homogeneous. (Prove it by going back to affinity of $u$.)
+		\item $u(X)$ is an interval containing $0$
+		      in its interior if there exists $f \succ g \in \bm F_X$.
+		\item $I$ is an affine Chisini mean on $\bm F_{u(X)}$.
+		\item By the Chisini lemma, there exists an unique $P \in \bm \Delta(\Sigma)$
+		      such that $\succsim$ is represented by the SEU criterion.
+	\end{enumerate}
 
-\subsection{Gilboa-Schmeidler}
+	\subsection{Gilboa-Schmeidler}
 
-\paragraph{Setup}
-This time the problem is that we want to model ambiguity.
-DMs are more likely to choose acts from which they are aware
-of the distribution of the consequences.
+	\paragraph{Setup}
+	This time the problem is that we want to model ambiguity.
+	DMs are more likely to choose acts from which they are aware
+	of the distribution of the consequences.
 
-\paragraph{Axioms} A.1, A.2, A.4, A.16, GS.3, GS.6
+	\paragraph{Axioms} A.1, A.2, A.4, A.16, GS.3, GS.6
 
-\paragraph{Theorem}
-Consider $\succsim$ on $\bm F$.
-\begin{itemize}
-	\item $\succsim$ satisfies the axioms
-	\item There exists an affine function	$u: X \to \bm F$
-	      and a set of probabilities $\mathcal C \subseteq \bm \Delta(\bm \Sigma)$
-	      such that
-	      \[
-		      U(f) = \min_{P\in \mathcal C} \int_S u(f(s)) dP(s)
-	      \]
-\end{itemize}
+	\paragraph{Theorem}
+	Consider $\succsim$ on $\bm F$.
+	\begin{itemize}
+		\item $\succsim$ satisfies the axioms
+		\item There exists an affine function	$u: X \to \bm F$
+		      and a set of probabilities $\mathcal C \subseteq \bm \Delta(\bm \Sigma)$
+		      such that
+		      \[
+			      U(f) = \min_{P\in \mathcal C} \int_S u(f(s)) dP(s)
+		      \]
+	\end{itemize}
 
-\paragraph{Derivation}
-TODO: see giuseppe's notes
-%\end{multicols}
+	\paragraph{Derivation}
+	\begin{enumerate}
+		\item Follow the same derivation steps of Anscombe-Aumann until 7.
+		      The only difference is that $V$ and $I$ are not affine anymore
+		      but just \textit{constant-affine}.
+		\item Note that $I$ is still homogeneous, therefore we can define an unique extension $\hat I$
+		      which is a constant affine Chisini mean.
+		\item If $V(f) = V(g)$ then
+		      $V(\alpha f + \overline \alpha g) \geq \alpha V(f) + \overline \alpha V(g)$.
+		      The same is true for $I$ and for $\hat I$.
+		\item $\hat I$ is concave (the previous point holds even if $u \circ f \neq u \circ g$).
+		\item $\hat I$ is a concave constant-affine Chisini mean, therefore we can apply Chisini lemma.
+	\end{enumerate}
+\end{multicols}
 
 \end{document}
