Remove de finetti

--- a/dt-cheatsheet.tex
+++ b/dt-cheatsheet.tex
@@ -200,31 +200,31 @@
 	%\paragraph{B.5 Certainty equivalent}
 	%For every $l \in \bm L$ there exists $c_l \in \bm C$ such that $l \sim c_l$.
 
-	\subsection{De Finetti}
-	These are acioms over events $E \in \bm \Sigma$,
-	where $\succsim^*$ is the \textit{qualitative probability}:
-	\say{event $E$ is at least as likely as event $F$}.
-
-	\paragraph{DF.1 Weak order}
-	$\succsim^*$ is complete and transitive (A.1 and A.2)
-
-	\paragraph{DF.2 Normalization}
-	For all events $E \in \bm \Sigma$
-	we have $S \succsim^* E \succsim^* \varnothing$
-	and $S \succsim^* \varnothing$.
-
-	\paragraph{DF.3 Additivity}
-	For all events $E, F, H$ such that $E \cap H = F \cap H = \varnothing$ we have
-	\[
-		E \succsim^* F \iff E \cup H \succsim^* F \cup H
-	\]
-
-	\paragraph{DF.4 Equidivisibility}
-	For each $n \geq 1$ there exists a partition of $2^n$ equally likely events.
-
-	A stronger version (\textit{Divisibility}) states that for all $E \succ^* F$ there ecists
-	a partition of events $\{H_i\}^n_{i = 1}$
-	such that $E \succ^* F \cup H_i$ for all $i = 1, \dots, n$.
+	%\subsection{De Finetti}
+	%These are acioms over events $E \in \bm \Sigma$,
+	%where $\succsim^*$ is the \textit{qualitative probability}:
+	%\say{event $E$ is at least as likely as event $F$}.
+	%
+	%\paragraph{DF.1 Weak order}
+	%$\succsim^*$ is complete and transitive (A.1 and A.2)
+	%
+	%\paragraph{DF.2 Normalization}
+	%For all events $E \in \bm \Sigma$
+	%we have $S \succsim^* E \succsim^* \varnothing$
+	%and $S \succsim^* \varnothing$.
+	%
+	%\paragraph{DF.3 Additivity}
+	%For all events $E, F, H$ such that $E \cap H = F \cap H = \varnothing$ we have
+	%\[
+	%	E \succsim^* F \iff E \cup H \succsim^* F \cup H
+	%\]
+	%
+	%\paragraph{DF.4 Equidivisibility}
+	%For each $n \geq 1$ there exists a partition of $2^n$ equally likely events.
+	%
+	%A stronger version (\textit{Divisibility}) states that for all $E \succ^* F$ there ecists
+	%a partition of events $\{H_i\}^n_{i = 1}$
+	%such that $E \succ^* F \cup H_i$ for all $i = 1, \dots, n$.
 
 	\subsection{Savage}
 	We consider $\succsim$ on the set $\bm F$ of acts from $S$ to $\bm C$.
