--- a/preamble_code.sty
+++ b/preamble_code.sty
@@ -2,6 +2,6 @@
 \ProvidesPackage{preamble_code}
 [2024/04/30 Preamble code]
 
-\RequirePackage[outputdir=build/aux]{minted}
+\RequirePackage{minted}
 
 \endinput
