--- a/advanced-programming.tex
+++ b/advanced-programming.tex
@@ -7,7 +7,7 @@
 \date{a.y. 2024/2025}
 
 \usepackage{preamble}
-\usepackage{preamble_code}
+%\usepackage{preamble_code}
 
 \renewcommand{\vec}[1]{\uvec{#1}}
 
@@ -56,7 +56,7 @@ the problem has multiple solutions, it is undecidable, or unbounded.
 
 \begin{example}{Icecream production}{}
 	Each month $i$ has a certain icecream demand $d_i$.
-	Changing the prodution of icecream has a cost $a_1$ and the cost of storing icecream we pay $a_2$.
+	Changing the production of icecream has a cost $a_1$ and the cost of storing icecream we pay $a_2$.
 	What is the optimal amount of icecream to be produced?
 \end{example}
 
@@ -71,9 +71,9 @@ the problem has multiple solutions, it is undecidable, or unbounded.
 	\begin{equation}
 		\min a_1 \sum \abs{x_i - x_{i-1}} + a_2 \sum s_i
 	\end{equation}
-	but this is not a linear funtion!
+	but this is not a linear function!
 
-	Instead we introduce two new variables $y_i$ which represents the increase in the prodution
+	Instead we introduce two new variables $y_i$ which represents the increase in the production
 	and $z_i$ which represents the decrease in the production.
 	We can now add the constraint
 	\begin{align}
@@ -89,5 +89,174 @@ the problem has multiple solutions, it is undecidable, or unbounded.
 	Moreover, we notice that an optimal solution either has $y_i = 0$ or $z_i = 0$,
 	hence the problem is equivalent to the first one.
 \end{proof}
+
+\subsection{0-sum games}
+
+A 0-sum game has the following properties:
+\begin{itemize}
+	\item There is a finite set of strategies
+	\item Assume player $A$ plays move $i$ and player $B$ plays $j$,
+	      then the game pays $m_{ij}$ to player $A$ and $-m_{ij}$ to player $B$.
+\end{itemize}
+Therefore we can consider the game to be a matrix $M$.
+
+\subsubsection{Example: Colonel Blotto}
+
+\paragraph{Modelling the game}
+There are two armies ($B$ and $E$) which are fighting at $3$ mountain passes ($a, b, c$).
+$B$ and $E$ have $5$ regiments each.
+
+What each player has to decide is how to partition the regiments:
+we will have $k, \ell, m$ such that $k \leq \ell \leq m$ and $k+\ell + m = 5$;
+then each group $k, \ell, m$ will be randomly assigned to a mountain pass.
+
+The player who has more regiments in a certain pass will win the pass,
+in particular if the number of regiments is the same we will have a draw.
+The player who wins more passes wins the game.
+
+We will model the payoff as the probability of winning minus the probability of losing.
+
+\paragraph{Example game 1}
+Assume that $B$ plays $i = (0,0,5)$ and $E$ plays $j = (5, 0, 0)$.
+Then we have that
+\begin{equation}
+	m_{ij} = \frac{1}{3} \cdot 0 + \frac{2}{3} \cdot 0 = 0
+\end{equation}
+where the first probability represents the case where the two armies meet, therefore we have a draw;
+the second probability is for all other cases, where one army wins and the other one loses,
+therefore we again get a draw.
+
+\paragraph{Example game 2}
+Assume that $B$ plays $i = (0,1,4)$ and $E$ plays $j = (5, 0, 0)$.
+Then we have that
+\begin{equation}
+	m_{ij} = \frac{1}{3} \cdot 1 + \frac{2}{3} \cdot 0 = \frac{1}{3}
+\end{equation}
+similarly to the case above.
+
+\paragraph{How to choose the best strategy}
+In this way we can construct a matrix with all the payoffs, however how can we choose the best one?
+We could assume that the opponent chooses a strategy at random, therefore we should choose the
+strategy with the highest expected payoff, but the enemy is also a skilled player, therefore he
+won't choose a strategy at random.
+
+Players will choose based on the worst possible outcome, but then the worst case scenario will
+always realize.
+Moreover, even if each player knew that the other one is playing the \say{optimal} strategy,
+the best option would still be to play the same strategy.
+This is called \emph{pure Nash equilibrium}.
+
+\begin{definition}{Pure Nash equilibrium}{pure-nash-eq}
+	There exists a pair of pure strategies $(i, j)$ which are the best responses to each other.
+\end{definition}
+
+\subsubsection{Rock-Paper-Scissors}
+
+\paragraph{Normal game}
+This game does not have a Nash equilibrium, however we can have a mixed strategy.
+
+\begin{definition}{Mixed Nash equilibrium}{mixed-nash-eq}
+	$(\tilde x, \tilde y)$ is a mixed Nash equilibrium if each player's response $\alpha(\tilde y)$
+	and $\beta(\tilde x)$ is such that
+	\begin{equation}
+		\beta(\tilde x) = x^T M y = \alpha(\tilde y)
+	\end{equation}
+\end{definition}
+
+The payoff $(x, y)$ will be
+\begin{equation}
+	\sum_{i, j} m_{ij} \cdot P(A \text{ plays } i, B \text{ plays } j)
+	= \sum_{i, j} m_{ij} x_i y_i = x^T M y
+\end{equation}
+
+Therefore in this case, the mixed Nash equilibrium is to choose a strategy uniformly at random:
+even if the opponent knew my strategy, there is no better way to respond.
+
+\paragraph{Easter Bunny and Santa Claus}
+Assume now that Santa Claus and the Easter Bunny play a game of R-P-S,
+however BS doesn't know how to use scissors.
+
+Assume SC chooses strategy $x$, we claim then for each mixed strategy $y$ of the EB,
+there exists a pure strategy $y'$ with at least the same payoff.
+
+Indeed EB can achieve
+\begin{equation}
+	\min \{ \underbrace{x_p - x_s}_{\text{EB plays rock}},
+	\underbrace{ -x_r + x_s}_{\text{EB plays paper}}\} = \beta(x)
+\end{equation}
+Meanwhile SC will max the worst case scenario:
+\begin{equation}
+	x_0 = \max_{x} \min \{ \underbrace{x_p - x_s}_{\text{EB plays rock}} ,
+	\underbrace{ -x_r + x_s}_{\text{EB plays paper}}\}
+	= \max_x \beta(x)
+	= \max_x \min_y x^T M y
+\end{equation}
+
+Therefore SC strategy can be solved through a linear program:
+\begin{align}
+	\max             x_0 & \quad \text{subject to}                    \\
+	x_0                  & \leq x_p - x_s          \label{eq:bunny-r} \\
+	x_0                  & \leq -x_r + x_s         \label{eq:bunny-p} \\
+	x_p + x_r + x_s      & = 1                                        \\
+	x_p, x_r, x_s        & \geq 0
+\end{align}
+where \cref{eq:bunny-r} is what happens when EB plays rock, \cref{eq:bunny-p} is when EB plays paper
+and the other two constraints are there to make sure that $x$ is a valid mixed strategy.
+Putting this program into a solver we get that the optimal solution is $\tilde x = (0, 2/3, 1/3)$
+and pays $1/3$.
+
+Similarly, for the EB we can write another linear program.
+\begin{equation}
+	y_0 = \min_{y} \max \{ \underbrace{y_p}_{\text{SC plays rock}} ,
+	\underbrace{y_r},
+	\underbrace{ -y_r + y_p}_{\text{EB plays paper}}\}
+	= \min_x \alpha(x)
+	= \min_x \max_y x^T M y
+\end{equation}
+Hence
+\begin{align}
+	\min y_0  & \quad \text{subject to} \\
+	y_0       & \leq y_p                \\
+	y_0       & \leq y_r                \\
+	y_0       & \leq -y_r + y_p         \\
+	y_p + y_r & = 1                     \\
+	y_p, y_r  & \geq 0
+\end{align}
+and solving the program gives that the optimal solution is $\tilde y = (1/3, 2/3)$ which pays $1/3$
+(therefore EB loses).
+Note that this is the same win that SC gets.
+We have
+\begin{equation}
+	\tilde x_0 = \beta(\tilde x) \leq \tilde x^T M \tilde y \leq \alpha(\tilde y) = \tilde y_0
+\end{equation}
+therefore $(\tilde x, \tilde y)$ is a mixed Nash equilibrium.
+
+\begin{theorem}{Von Neumann}{vn}
+	In a finite zero-sum game $x_0 = y_0$.
+	Therefore it does not matter who chooses the strategy first.
+\end{theorem}
+
+
+\subsubsection{AA}
+
+We want to find a line $y = ax + b$ which separates two kind of points $p$ and $q$
+such that $p$ are above the line and $q$ are below.
+We try to write this as a linear problem
+\begin{align}
+	y(p_i) > ax(p_i) + b \quad \forall i = 1, \dots, m \\
+	y(q_i) < ax(q_i) + b \quad \forall i = 1, \dots, m
+\end{align}
+
+However, this is not a linear program, because the inequality are strict.
+We can fix this by introducing another variable $\delta$ and a constraint $\delta \geq 0$,
+moreover we also need to $\max$ is, since, ideally we'd like for $\delta$ to be $> 0$ but, again,
+we are not allowed to have strict inequalities.
+\begin{align}
+	\max \delta & \text{subject to}                                    \\
+	y(p_i)      & > ax(p_i) + b + \delta \quad \forall i = 1, \dots, m \\
+	y(q_i)      & < ax(q_i) + b + \delta \quad \forall i = 1, \dots, m \\
+	\delta      & \geq 0
+\end{align}
+
 
 \end{document}
